[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameWorld/PlantSpot/PlantGui3D.gd" type="Script" id=1]
[ext_resource path="res://GameWorld/PlantSpot/PlantGui.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/kenney_natureKit_2.1/Models/OBJ format/plant_bush.obj" type="ArrayMesh" id=3]
[ext_resource path="res://GameWorld/PlantSpot/PlantSpot.gd" type="Script" id=4]
[ext_resource path="res://Assets/kenney_natureKit_2.1/Models/OBJ format/grass_leafs.obj" type="ArrayMesh" id=5]

[node name="PlantSpot" type="Spatial"]
script = ExtResource( 4 )

[node name="PlantModel" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000965476, 0, -0.00294542 )
mesh = ExtResource( 3 )

[node name="WeedModel" type="MeshInstance" parent="."]
visible = false
mesh = ExtResource( 5 )

[node name="PlantGui" parent="." instance=ExtResource( 2 )]

[node name="PlantGui3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0.5 )
visible = false
billboard = 1
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="PlantGui3D"]
size = Vector2( 96, 96 )
transparent_bg = true
hdr = false
usage = 0
render_target_v_flip = true
gui_disable_input = true
